syntax = "proto3";

package api.agent;

option go_package="github.com/synerex/synerex_alpha/api/simulation/agent";

import "simulation/agent/pedestrian.proto";
import "simulation/agent/car.proto";
import "simulation/agent/train.proto";
import "simulation/agent/signal.proto";

message GetAgentsDemand {
    uint64 time = 1;
    uint64 area_id = 2;
    AgentType agent_type = 3;
}

message GetAgentsSupply {
    uint64 time = 1;
    uint64 area_id = 2;
    AgentType agent_type = 3;
    repeated Agent agents_info = 4;
}

message SetAgentsDemand {
    repeated Agent agents_info = 1;
}

message SetAgentsSupply {
    uint64 time = 1;
    uint64 area_id = 2;
    AgentType agent_type = 3;
}

message ForwardAgentsSupply {
    uint64 time = 1;
    uint64 area_id = 2;
    AgentType agent_type = 3;
    repeated Agent agents_info = 4;
}

message GetAgentRouteDemand {
    Agent agents_info = 1;
}

message GetAgentRouteSupply {
    Agent agents_info = 1;
}

message GetAgentsRouteDemand {
    repeated Agent agents_info = 1;
}

message GetAgentsRouteSupply {
    repeated Agent agents_info = 1;
}

message Agent {
    uint64 id = 1;
    AgentType type = 2;
	oneof data {
		pedestrian.Pedestrian pedestrian = 3;
		car.Car car = 4;
		train.Train train = 5;
		signal.Signal signal = 6;
	}
}

enum AgentType {
    PEDESTRIAN = 0;
    CAR = 1;
	TRAIN = 2;
	SIGNAL = 3;
}
